--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-900 text-white min-h-screen flex items-center justify-center">
 
     <div class="bg-gray-800 p-8 rounded-lg shadow-xl w-full max-w-sm">
-        <h1 class="text-3xl font-bold text-center mb-6">Pixora Solutions</h1>
+        <h1 class="text-3xl font-bold text-center mb-6">Nano It Solutions</h1>
         
         <form id="login-form">
             <div class="mb-4">
